# wrangling_with_polars

./: README.md  notebook.ipynb  pyproject.toml
data/: Data.csv
